code for index.html v1

--- a/web-app/browser/index.html
+++ b/web-app/browser/index.html
@@ -14,6 +14,9 @@
 </header>
 
 <aside>
+    <!-- div inside here, have the class = grid /// format: <div id="grid" class="grid"> but different id-->
+    <div id="grid2" class="grid">
+    </div>
 </aside>
 
 <main>
