--- a/web-app/browser/index.html
+++ b/web-app/browser/index.html
@@ -15,8 +15,20 @@
 
 <aside>
     <!-- div inside here, have the class = grid /// format: <div id="grid" class="grid"> but different id-->
+
+    <div style = 'text-align: center;'> next
+    </div>
+
+
     <div id="grid2" class="grid">
     </div>
+
+    <div style = 'text-align: center;'> hold
+    </div>
+
+    <div id="grid3" class="grid">
+    </div>
+
 </aside>
 
 <main>
